--- a/start.css
+++ b/start.css
@@ -1,33 +1,30 @@
 *{
     user-select: none;
+
+
+
 }
 body{
-    background: url(./Waves.png),no-repeat;
-    background-attachment: fixed;
+    background: url(./风暴之眼.png),no-repeat;
     background-size: cover;
-    
-}
-.start_box{
-    border: solid aliceblue;
-    display: flex;
-
-    margin: 0,auto;
-    background-color: rgba(0, 0, 0, 0.184);
-
-    width: 1900px;
-    height: 2000px;
+    font-size: 32px;
 
     
-    border-radius: 50px;
-    backdrop-filter: blur(20px);
-    box-shadow: 1px 1px 8px black;
+    
 }
-.blog{
-    width: 1000px;
-    height: 100px;
-    background-color: rgba(85, 102, 118, 0.699);
-}
-.start_title{
-    color: aliceblue;
+.box{
+    width: 151px;
+    height: 41px;
+    background-color: rgba(240, 248, 255, 0);
+    backdrop-filter: blur(100px);
+    border: solid white;
+    padding-top: 0%;
+    padding-right: 0%;
+    padding-left: 0%;
+    padding-bottom: 0%;
 
+
+}
+
+@media screen{
 }
