--- a/downl.css
+++ b/downl.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
+@font-face {
+    font-family: "lazy";
+    src: url(./SanJiNengLiangHeiJianTi-2.ttf);
+    }
 body{
 	background: url(./Lonely\ Night\ .png),no-repeat;
     background-size: cover;
@@ -73,5 +77,42 @@ body{
     border-width:1px;
 	border-color: rgba(91, 134, 172, 0.459);
 }
+.公告{
+	width: 1000px;
+    border: 3px solid rgb(0, 238, 255);
+    padding: 25px;
+    margin: 25px;
+	text-align: center;
+	font-size: 40px;
+	background-color: rgba(0, 255, 255, 0.125);
+	backdrop-filter: blur(8px);
+
+	
+
+}
+.title{
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+    font-size: 14px;
+    color: #999;
+}
+.title::before,.title::after{
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    background: #ccc;
+    top: 50%;
+}
+.title::before{
+    margin-left: -10px;
+    transform: translateX(-100%);
+}
+.title::after{
+    margin-left: 10px;
+}
+
 
 
