--- a/downl.css
+++ b/downl.css
@@ -32,14 +32,25 @@ body{
 .临时{
 	text-decoration: none;
 	color: inherit;
-	background: rgba(255, 0, 0, 0.2);
+	background: rgba(23, 128, 0, 0.3);
     backdrop-filter: blur(100px);
     border-radius: 4px;
 	font-size: 10px;
-	color: rgb(255, 132, 0);
+	color: rgb(0, 255, 81);
 	padding:2px;
+
 	
 
+}
+.重要{
+	text-decoration: none;
+	color: inherit;
+	background: rgba(255, 0, 0, 0.364);
+    backdrop-filter: blur(100px);
+    border-radius: 4px;
+	font-size: 10px;
+	color: rgb(255, 0, 0);
+	padding:2px;
 }
 .进入{
 	text-decoration: none;
@@ -113,6 +124,3 @@ body{
 .title::after{
     margin-left: 10px;
 }
-
-
-
